--- a/JS Game.html
+++ b/JS Game.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>JS Game</title>
-<link rel="stylesheet" href="./JS Game_files/style.css"></head>
+<link rel="stylesheet" href="style2.css"></head>
 <body>
-    <script src="./JS Game_files/app.js" defer=""></script>
+    <script src="app2.js" defer=""></script>
 <!-- Code injected by live-server -->
 <script>
 	// <![CDATA[  <-- For SVG support
